feat: ai chat 插件

--- a/chat/client_v2/src/style.css
+++ b/chat/client_v2/src/style.css
@@ -28,6 +28,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #060415;
+  scrollbar-width: none; /* firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  &::-webkit-scrollbar {
+      display: none; /* Chrome Safari */
+  }
 }
 
 h1 {
